--- a/style.css
+++ b/style.css
@@ -15,3 +15,19 @@
 .footer{
     background-color: rgb(126, 133, 133);
 }
+.boton{
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    padding: 10px 20px;
+    background-color: blue;
+    color: rgb(244, 248, 251);
+    text-decoration: none;
+    border-radius: 5px;
+}
+.boton:hover{
+    background-color: aquamarine;
+}
+.boton:active{
+    font-size: 20px;
+}
