--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     border-radius: 5px;
 }
 .boton:hover{
-    background-color: aquamarine;
+    background: linear-gradient(to right,#eb0f0f,#e3f60f,#1df64f);
 }
 .boton:active{
     font-size: 20px;
