--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@
 }
 .video-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gri
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     gap: 20px;
 }
 
@@ -42,5 +43,5 @@
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    height: 20px;
+    height: 200px;
 }
