--- a/style.css
+++ b/style.css
@@ -45,3 +45,25 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     height: 200px;
 }
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Cria colunas adaptáveis */
+    grid-gap: 10px; /* Espaço entre as fotos */
+    padding: 10px;
+}
+
+.grid-item {
+    overflow: hidden;
+    border-radius: 8px;
+}
+
+.grid-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ajusta a imagem para preencher o espaço */
+    transition: transform 0.3s;
+}
+
+.grid-item img:hover {
+    transform: scale(1.1); /* Efeito de zoom ao passar o mouse */
+}
